@@ -10,3 +10,4 @@ MStrange: 0.10
 MCharm: 1.29
 MBottom: 4.19
 MTop: 172.9
+AlphaS_Type: analytic
