@@ -1,3 +1,7 @@
+2013-06-12  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Mapping addition of PDFSet, more factory functions, and related changes into Python.
+
 2013-06-11  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Adding default values to PDF::xMin/Max and PDF::q2Min/Max.
